[package]
name = "teloxide-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11.23"
serde = "1.0.193"
serde_json = "1.0.108"
color-eyre = "0.6.2"
uuid = { version = "1.6.1", features = ["v4"] }
